--- a/index.html
+++ b/index.html
@@ -1,194 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EdgeLedger Financial | Accounting & Investment</title>
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="css/style.css" />
-    <link
-      rel="stylesheet"
-      media="screen and (max-width: 768px)"
-      href="css/mobile.css"
-    />
-    <link
-      rel="stylesheet"
-      media="screen and (min-width: 1100px)"
-      href="css/widescreen.css"
-    />
-  </head>
 
-  <body>
-    <nav id="navbar">
-      <h1 class="logo">
-        <span class="text-primary">
-          <i class="fas fa-book-open"></i> Edge
-        </span>
-        Ledger
-      </h1>
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#what">What</a></li>
-        <li><a href="#who">Who</a></li>
-        <li><a href="#contact">Contact</a></li>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>EdgeLedger Financial | Accounting & Investment</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css" />
+  <link rel="stylesheet" media="screen and (min-width: 1100px)" href="css/widescreen.css" />
+</head>
+
+<body>
+  <nav id="navbar">
+    <h1 class="logo">
+      <span class="text-primary">
+        <i class="fas fa-book-open"></i> Edge
+      </span>
+      Ledger
+    </h1>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#what">What</a></li>
+      <li><a href="#who">Who</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+  <!-- Header: Showcase -->
+  <header id="showcase">
+    <div class="showcase-content">
+      <h1 class="l-heading">The Sky Is The Limit</h1>
+      <p class="lead">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
+        voluptatibus debitis praesentium inventore, eum desrunt.
+      </p>
+      <a href="#what" class="btn">Read More</a>
+    </div>
+  </header>
+
+  <!-- Section: What We Do -->
+  <section id="what" class="bg-light py-1">
+    <div class="container">
+      <h2 class="m-heading text-center">
+        <span class="text-primary">What</span> We Do
+      </h2>
+      <div class="items">
+        <div class="item">
+          <i class="fas fa-university fa-2x"></i>
+          <div>
+            <h3>Investment Banking</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Archotectp, voluptatum!
+            </p>
+          </div>
+        </div>
+        <div class="item">
+          <i class="fas fa-book-reader fa-2x"></i>
+          <div>
+            <h3>Portfolio Management</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Archotectp, voluptatum!
+            </p>
+          </div>
+        </div>
+        <div class="item">
+          <i class="fas fa-pencil-alt fa-2x"></i>
+          <div>
+            <h3>Tax & Custodial</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Archotectp, voluptatum!
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Section: Who We Are -->
+  <section id="who">
+    <div class="who-img"></div>
+    <div class="who-text bg-dark p-2">
+      <h2 class="m-heading">
+        <span class="text-primary">Who</span>
+        We Are
+      </h2>
+      <p>
+        Lorem ipsun dolor sit, amet consectetur adipisicing elit. Tempora
+        culpa harum voluptas ratione enim consequuntur illo, atque, aut
+        doloribus unde repellendus sit delectus beatae aspernatur placeat
+        corrupti. Ipsa, itaque quas.
+      </p>
+      <h3>Our Team</h3>
+      <ul class="list">
+        <li>Mark Smith: CEO</li>
+        <li>Shanon John: CFO</li>
+        <li>John Corbit: Lead Accountant</li>
+        <li>Janet Williams: Investment Manager</li>
+        <li>Kara Jackson: Senior Accountant</li>
       </ul>
-    </nav>
-    <!-- Header: Showcase -->
-    <header id="showcase">
-      <div class="showcase-content">
-        <h1 class="l-heading">The Sky Is The Limit</h1>
-        <p class="lead">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
-          voluptatibus debitis praesentium inventore, eum desrunt.
-        </p>
-        <a href="#what" class="btn">Read More</a>
-      </div>
-    </header>
+    </div>
+  </section>
 
-    <!-- Section: What We Do -->
-    <section id="what" class="bg-light py-1">
-      <div class="container">
-        <h2 class="m-heading text-center">
-          <span class="text-primary">What</span> We Do
-        </h2>
-        <div class="items">
-          <div class="item">
-            <i class="fas fa-university fa-2x"></i>
-            <div>
-              <h3>Investment Banking</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Archotectp, voluptatum!
-              </p>
-            </div>
-          </div>
-          <div class="item">
-            <i class="fas fa-book-reader fa-2x"></i>
-            <div>
-              <h3>Portfolio Management</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Archotectp, voluptatum!
-              </p>
-            </div>
-          </div>
-          <div class="item">
-            <i class="fas fa-pencil-alt fa-2x"></i>
-            <div>
-              <h3>Tax & Custodial</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Archotectp, voluptatum!
-              </p>
-            </div>
-          </div>
+  <!-- Section: Clients -->
+  <section id="clients" class="py-1">
+    <div class="container">
+      <h2 class="m-heading text-center">
+        <span class="text-primary">Our</span>
+        Clients
+      </h2>
+      <div class="items py-1">
+        <div><img src="./img/logos/log1.png" alt="Client" /></div>
+        <div><img src="./img/logos/log2.png" alt="Client" /></div>
+        <div><img src="./img/logos/log3.png" alt="Client" /></div>
+        <div><img src="./img/logos/log4.png" alt="Client" /></div>
+        <div><img src="./img/logos/log5.png" alt="Client" /></div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Section: Contact -->
+  <section id="contact">
+    <div class="contact-form bg-primary p-2">
+      <h2 class="m-heading">Contat Us</h2>
+      <p>Please use the form below to contact us</p>
+      <form>
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input type="text" name="name" id="name" placeholder="Enter name" />
         </div>
-      </div>
-    </section>
-
-    <!-- Section: Who We Are -->
-    <section id="who">
-      <div class="who-img"></div>
-      <div class="who-text bg-dark p-2">
-        <h2 class="m-heading">
-          <span class="text-primary">Who</span>
-          We Are
-        </h2>
-        <p>
-          Lorem ipsun dolor sit, amet consectetur adipisicing elit. Tempora
-          culpa harum voluptas ratione enim consequuntur illo, atque, aut
-          doloribus unde repellendus sit delectus beatae aspernatur placeat
-          corrupti. Ipsa, itaque quas.
-        </p>
-        <h3>Our Team</h3>
-        <ul class="list">
-          <li>Mark Smith: CEO</li>
-          <li>Shanon John: CFO</li>
-          <li>John Corbit: Lead Accountant</li>
-          <li>Janet Williams: Investment Manager</li>
-          <li>Kara Jackson: Senior Accountant</li>
-        </ul>
-      </div>
-    </section>
-
-    <!-- Section: Clients -->
-    <section id="clients" class="py-1">
-      <div class="container">
-        <h2 class="m-heading text-center">
-          <span class="text-primary">Our</span>
-          Clients
-        </h2>
-        <div class="items py-1">
-          <div><img src="./img/logos/log1.png" alt="Client" /></div>
-          <div><img src="./img/logos/log2.png" alt="Client" /></div>
-          <div><img src="./img/logos/log3.png" alt="Client" /></div>
-          <div><img src="./img/logos/log4.png" alt="Client" /></div>
-          <div><img src="./img/logos/log5.png" alt="Client" /></div>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" name="email" id="email" placeholder="Enter email" />
         </div>
-      </div>
-    </section>
+        <div class="form-group">
+          <label for="phone">Phone Number</label>
+          <input type="text" name="phone" id="phone" placeholder="Enter phone" />
+        </div>
+        <div class="form-group">
+          <label for="message">Message</label>
+          <textarea name="message" id="message" placeholder="Enter message"></textarea>
+        </div>
+        <input type="submit" value="Submit" class="btn btn-dark" />
+      </form>
+    </div>
+    <div class="map"></div>
+  </section>
 
-    <!-- Section: Contact -->
-    <section id="contact">
-      <div class="contact-form bg-primary p-2">
-        <h2 class="m-heading">Contat Us</h2>
-        <p>Please use the form below to contact us</p>
-        <form>
-          <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text" name="name" id="name" placeholder="Enter name" />
-          </div>
-          <div class="form-group">
-            <label for="email">Email</label>
-            <input
-              type="email"
-              name="email"
-              id="email"
-              placeholder="Enter email"
-            />
-          </div>
-          <div class="form-group">
-            <label for="phone">Phone Number</label>
-            <input
-              type="text"
-              name="phone"
-              id="phone"
-              placeholder="Enter phone"
-            />
-          </div>
-          <div class="form-group">
-            <label for="message">Message</label>
-            <textarea
-              name="message"
-              id="message"
-              placeholder="Enter message"
-            ></textarea>
-          </div>
-          <input type="submit" value="Submit" class="btn btn-dark" />
-        </form>
-      </div>
-      <div class="map"></div>
-    </section>
+  <!-- Footer -->
+  <footer id="main-footer" class="bg-dark text-center">
+    <div class="container">
+      <p>Copyright &copy; 2019 EdgeLedger, All rights Reserved</p>
+    </div>
+  </footer>
 
-    <!-- Footer -->
-    <footer id="main-footer" class="bg-dark text-center">
-      <div class="container">
-        <p>Copyright &copy; 2019 EdgeLedger, All rights Reserved</p>
-      </div>
-    </footer>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="js/main.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3Pp77bHyX3HAYrHXbBVpKl2EnI-Sj3e4&callback=initMap"
+    async defer></script>
+</body>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="js/main.js"></script>
-    <script
-      src="https://maps.googleapis.com/maps/api/js? key=AIzaSyDoZg2Es_GrQHZf_52j2-xZ3cTfBCR0HII&callback=initMap"
-      async
-      defer
-    ></script>
-  </body>
 </html>
